fix: hide scrollbars for overflow element

--- a/public/assets/main/theme-1/scss/homepage.scss
+++ b/public/assets/main/theme-1/scss/homepage.scss
@@ -262,7 +262,13 @@ $smal14-text: 14px;
     flex-direction: column;
     max-height: 500px;
     overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
 
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    
     &-item{
       padding: 16px;
       color: rgb(255, 255, 255, 0.7);
@@ -408,6 +414,12 @@ $smal14-text: 14px;
   #info{
     .info-category-wrapper{
       overflow: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none; 
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
     .fade-bottom{
       display: none;
